Version 1.0.40(Build 202204XXXX)
- Removed JQuery UI which was breaking Moodle 4.0 dock
- Fixed issue with activity being closed if open date set, but close data not set

Version 1.0.39(Build 2022041800)
- Added a course attempts report
- Added DataTables support for report


Version 1.0.38(Build 2022041300)
- Added TTS Dialog
- Added Ukranian, Finnish, Russian, Portuguese, Basque, Italian, Polish, Hungarian, Romanian to Poodll STT
- Added YouTube URL parsing

Version 1.0.37(Build 2022032000)
- Fixed an issue with JP phonetic matching
- fixed issue in get_course_moduleinfo that could kill backup and restore
- tweaked polly stuff
- added Norwegian, Romanian, Polish and Swedish

Version 1.0.36(Build 2022022000)
- Added a more detailed results screen
- Added a placeholder while activity loads

Version 1.0.35(Build 2022021401)
- Fixed issue with incomplete attempts

Version 1.0.34(Build 2022021400)
- Added duplicate feature
- Added a 3rd prompt/response option textprompt and changed sequence in UI. (update.php rewrites existing qs to match)
- Added an incomplete attempts report

Version 1.0.33(Build 2022020800)
- Added open and close start dates

Version 1.0.32(Build 2022020300)
- Fixed broken new item saving when not using Japanese on qs with speech recognition
- Added Youtube Clip content type

Version 1.0.31(Build 2022012500)
- Added missing number/alphabet processing class

Version 1.0.30(Build 2022012001)
- Added ShortAnswer question type
- Added TTS Autoplay
- Added Layout option
- added credential fetching

Version 1.0.29(Build 2021112100)
- Added neural voices
- Added ability to force Poodll STT
- Added ignore punctuation mode to dictation
- Fixed browser speech recognition on Safari

Version 1.0.28 (Build 2021082700)
- Better phonetic comparisons

Version 1.0.27 (Build 2021081800)
- Fixed array key exists on php8

Version 1.0.26 (Build 2021063000)
- Fixed media prompt html editor that would not hide

Version 1.0.25 (Build 2021053100)