@@ -867,7 +867,8 @@ class utils{
 
     public static function fetch_options_listenorread() {
         $options = array(constants::LISTENORREAD_READ => get_string("listenorread_read", constants::M_COMPONENT),
-                constants::LISTENORREAD_LISTEN => get_string("listenorread_listen", constants::M_COMPONENT));
+                constants::LISTENORREAD_LISTEN => get_string("listenorread_listen", constants::M_COMPONENT),
+                    constants::LISTENORREAD_LISTENANDREAD => get_string("listenorread_listenandread", constants::M_COMPONENT));
         return $options;
     }
 
